--- a/coverphoto.css
+++ b/coverphoto.css
@@ -3,7 +3,6 @@ body {
     */
     background-color: white;
    /* background-image: url("white-wood.jpg"); */
-
 }
 
 h1 {
@@ -15,7 +14,22 @@ h1 {
 
 }
 
-footer {
-    padding: 20px;
-    bottom: 100px;
-}
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+    position: relative;
+    min-height: 100%;
+  }
+  body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+  }
+  .footer {
+    font-size: 8pt;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  }
+  
